[gd_scene load_steps=5 format=2]

[ext_resource path="res://maps/main_menu/options_and_levels.gd" type="Script" id=1]
[ext_resource path="res://maps/themes_and_styles/scroll.theme" type="Theme" id=2]
[ext_resource path="res://maps/main_menu/scrollable_button.tscn" type="PackedScene" id=3]
[ext_resource path="res://maps/main_menu/click_audio_player.tscn" type="PackedScene" id=4]

[node name="options_and_levels" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.498039 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 40
custom_constants/margin_left = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 40.0
margin_right = 1240.0
margin_bottom = 720.0
custom_constants/separation = 10

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1071.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
follow_focus = true
scroll_horizontal_enabled = false

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
margin_right = 1071.0
margin_bottom = 720.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 40
custom_constants/margin_bottom = 40

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer"]
margin_top = 40.0
margin_right = 1051.0
margin_bottom = 680.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 20
custom_constants/hseparation = 20
columns = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 1081.0
margin_right = 1200.0
margin_bottom = 720.0
mouse_filter = 1
custom_constants/margin_top = 40
custom_constants/margin_bottom = 40

[node name="back_button" parent="MarginContainer/VBoxContainer/MarginContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 40.0
margin_right = 119.0
margin_bottom = 680.0
text = " Back "

[node name="click" parent="." instance=ExtResource( 4 )]

[connection signal="scrollincluded_pressed" from="MarginContainer/VBoxContainer/MarginContainer/back_button" to="." method="_on_back_button_scrollincluded_pressed"]
